--- a/question-frontend/src/app/login/login.component.css
+++ b/question-frontend/src/app/login/login.component.css
@@ -1,9 +1,46 @@
-.example-container mat-form-field + mat-form-field {
-
-    margin-left: 10px;
-  
-  }
-.botao{
+.container {
   display: flex;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+  margin: 0;
+}
+
+.login-form {
+  background-color: #f9f9f9;
+  padding: 30px;
+  width: 350px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login-form h2 {
+  text-align: center;
+  margin-top: 0;
+}
+
+.login-form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.login-form input[type="email"]{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+}
+
+.login-form button[type="submit"] {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.login-form button[type="submit"]:hover {
+  background-color: #3e8e41;
 }
