--- a/question-frontend/src/app/create-question/create-question.component.css
+++ b/question-frontend/src/app/create-question/create-question.component.css
@@ -12,4 +12,17 @@
     display: flex;
     align-items: flex-start;
 }
+
+.login-form button[type="submit"] {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.login-form button[type="submit"]:hover {
+  background-color: #3e8e41;
+}
   
